chore - reduce static analysis warnings