@@ -17,9 +17,9 @@ plugins {
     id "com.vaadin" version "0.17.0.0"
 }
 
-if (mode.equalsIgnoreCase('dev')) {
+//if (mode.equalsIgnoreCase('dev')) {
     apply plugin: 'org.gretty'
-}
+//}
 
 project.ext.groupId = 'net.tangly'
 project.ext.artifactId = 'ui'
@@ -45,6 +45,12 @@ jib {
     }
 }
 
+gretty {
+    contextPath = "/"
+    jvmArgs = ['--enable-preview']
+    servletContainer = "jetty9.4"
+}
+
 dependencies {
     implementation project(':net.tangly.commons')
     implementation project(':net.tangly.bus')
@@ -54,7 +60,9 @@ dependencies {
     implementation enforcedPlatform("com.vaadin:vaadin-bom:$vaadinVersion")
     providedCompile "javax.servlet:javax.servlet-api:3.1.0"
 
-    implementation 'com.github.mvysny.kaributesting:karibu-testing-v10:1.2.1'
     implementation 'com.storedobject.chart:so-charts:0.0.5'
     implementation "org.slf4j:slf4j-simple:$slf4jVersion"
+
+    testImplementation 'com.github.mvysny.kaributesting:karibu-testing-v10:1.2.4'
+
 }
